--- a/boot/work/Ex_0619_first/src/main/resources/templates/ex01.html
+++ b/boot/work/Ex_0619_first/src/main/resources/templates/ex01.html
@@ -9,7 +9,12 @@
 	<!-- th : text, th:utext
 		JSP의 EL표현식인 ${}와 마찬가지로 ${}를 사용해서 컨트롤러에서 전달받은 
 		데이터에 접근할 수 있다.  -->
-		<div th:text="${lastName">이 자리에는 성이 들어감</</div>
-		안녕하세요!
+		<div th:text="${lastName}">이 자리에는 성이 들어감</</div>
+		
+		<!-- 문자열 결합과 리터럴 치환 -->
+		<span  th:text"'My name is' +${LastName}+','+${firstName}"></span>
+		<span  th:text"|My name is ${LastName},{firstName|"></span> 
+
+		<span  th:text="${'<i>GilDong, Hong</i>'}">성과 이름</span> 
 </body>
 </html>
